--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>efootball</title>
+    <title>kbbtrends</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
